// Vitest Snapshot v1

exports[`caches the deps of previous calls > add file with circular dependency to cache 1`] = `
[
  "/src/api/apiCall.ts",
  "/src/api/apiCollectionStore.ts",
  "/src/api/apiMock.ts",
  "/src/api/apiStore.ts",
  "/src/api/authState.ts",
  "/src/api/authentication.ts",
  "/src/api/createDemoAccount.ts",
  "/src/api/formatRecordData.ts",
  "/src/api/getSessionType.ts",
  "/src/api/login.ts",
  "/src/api/logout.ts",
  "/src/api/stores/apiCollectionStore.ts",
  "/src/api/stores/apiDocumentStore.ts",
  "/src/api/stores/apiStoresTypes.ts",
  "/src/api/useGetCollectionItem.ts",
  "/src/api/useGetRecord.ts",
  "/src/api/useQueryObjectData.ts",
  "/src/api/websocket-api/websocketApi.ts",
  "/src/components/AddConnectedRecordButton.tsx",
  "/src/components/AddFilterModal/AddFilterModal.tsx",
  "/src/components/AddFilterModal/getValueInput.tsx",
  "/src/components/Board/Board.tsx",
  "/src/components/Board/BoardCard.tsx",
  "/src/components/Board/CardField.tsx",
  "/src/components/Board/CreateColumnModal.tsx",
  "/src/components/Board/RenameColumnModal.tsx",
  "/src/components/Board/cardFields.tsx/KanbanCommentsField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanEnhancedTextField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanFilesField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanRelativeTimeField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanTagsField.tsx",
  "/src/components/Board/useBoard.tsx",
  "/src/components/DateTimePicker/DateTimePicker.tsx",
  "/src/components/DateTimePicker/FloatingLabelDateTimePicker.tsx",
  "/src/components/FieldCard.tsx",
  "/src/components/FieldDescriptionIndicator.tsx",
  "/src/components/FieldTypeSelect.tsx",
  "/src/components/FilterMenu.tsx",
  "/src/components/FloatingLabelContainer.tsx",
  "/src/components/JestorTip.tsx",
  "/src/components/ListInput/ListInput.tsx",
  "/src/components/ListInput/RenameItemModal.tsx",
  "/src/components/MediaViewer.tsx",
  "/src/components/MultiselectOptionsBar.tsx",
  "/src/components/ObjectCreateButton.tsx",
  "/src/components/PaymentWarningBanner.tsx",
  "/src/components/RelatedToObjectTable.tsx",
  "/src/components/SearchableList.tsx",
  "/src/components/Select/FloatingLabelSelect.tsx",
  "/src/components/Select/RecordSelect/RecordSelect.tsx",
  "/src/components/Select/RecordSelect/RecordSelectMenu.tsx",
  "/src/components/Select/defaultSelectButton.tsx",
  "/src/components/Select/defaultSelectMenu.tsx",
  "/src/components/SelectFieldsModal/DefaultFieldContainer.tsx",
  "/src/components/SelectFieldsModal/SelectFieldsModal.tsx",
  "/src/components/ShoppingCart/ShoppingCartComponent.tsx",
  "/src/components/ShoppingCart/ShoppingCartFormItemComponent.tsx",
  "/src/components/ShoppingCart/ShoppingCartItemComponent.tsx",
  "/src/components/SidePanel/FieldSelectSection.tsx",
  "/src/components/SidePanel/SidePanelToggleFieldsGroup.tsx",
  "/src/components/SidePanel/form/SidePanelCheckboxGroup.tsx",
  "/src/components/SidePanel/form/SidePanelFieldContainer.tsx",
  "/src/components/SidePanel/form/SidePanelFieldsGroup.tsx",
  "/src/components/SidePanel/form/SidePanelFieldsGroupArray.tsx",
  "/src/components/SidePanel/form/SidePanelFilterField.tsx",
  "/src/components/SidePanel/form/SidePanelListInput.tsx",
  "/src/components/SidePanel/form/SidePanelObjectFieldsInput.tsx",
  "/src/components/SidePanel/form/SidePanelRadioSelect.tsx",
  "/src/components/SidePanel/form/SidePanelStringArrayInput.tsx",
  "/src/components/SidePanel/form/SidePanelTabsInput.tsx",
  "/src/components/TabDocumentationIndicator.tsx",
  "/src/components/Table/BodyCell.tsx",
  "/src/components/Table/cellsViewers/CellCommentsField.tsx",
  "/src/components/Table/cellsViewers/CellEnhancedTextField.tsx",
  "/src/components/Table/cellsViewers/CellFilesField.tsx",
  "/src/components/Table/cellsViewers/CellRelativeTimeField.tsx",
  "/src/components/Table/cellsViewers/CellTagsField.tsx",
  "/src/components/Table/cellsViewers/CellTasksField.tsx",
  "/src/components/Table/cellsViewers/CellUserField.tsx",
  "/src/components/TextField/FloatingLabelTextField.tsx",
  "/src/components/TextField/TextField.tsx",
  "/src/components/TriggerActionButton.tsx",
  "/src/components/TypeSelector/TypeSelector.tsx",
  "/src/components/comments/Comments.tsx",
  "/src/components/comments/CommentsViewer.tsx",
  "/src/components/comments/LastCommentHoverCard.tsx",
  "/src/components/fields/TagsFieldViewer.tsx",
  "/src/components/inputs/AutocompleteTextField.tsx",
  "/src/components/inputs/ImageInput.tsx",
  "/src/components/inputs/InputContainer.tsx",
  "/src/components/inputs/TabsSelect.tsx",
  "/src/components/inputs/TagInput/EditTagDropdown.tsx",
  "/src/components/inputs/TagInput/TagInput.tsx",
  "/src/components/inputs/TagsSelect.tsx",
  "/src/components/notifications/NotificationCard.tsx",
  "/src/components/notifications/TaskCard.tsx",
  "/src/components/notifications/TasksFilterMenu.tsx",
  "/src/components/notifications/TasksGroups.tsx",
  "/src/components/richText/MentionLists.tsx",
  "/src/components/richText/RichTextField.tsx",
  "/src/components/richText/RichTextFieldViewer.tsx",
  "/src/components/richText/getEditorText.ts",
  "/src/components/richText/markdownSerializer.ts",
  "/src/components/richText/plugins/CustomMention.ts",
  "/src/components/user/UserFieldViewer.tsx",
  "/src/components/user/UserHoverCard.tsx",
  "/src/components/user/renderUserSelectButton.tsx",
  "/src/data/componentTypes.ts",
  "/src/data/fieldTypesConfig.ts",
  "/src/pages/dashboard/DashboardComponentContainer.tsx",
  "/src/pages/dashboard/EditButtons.tsx",
  "/src/pages/dashboard/components/AppFilterComponent.tsx",
  "/src/pages/dashboard/components/AppMenuComponent.tsx",
  "/src/pages/dashboard/components/BarChart.tsx",
  "/src/pages/dashboard/components/CalendarEvent.tsx",
  "/src/pages/dashboard/components/DashButtonComponent.tsx",
  "/src/pages/dashboard/components/DashboardImage.tsx",
  "/src/pages/dashboard/components/Embed.tsx",
  "/src/pages/dashboard/components/FlowComponent.tsx",
  "/src/pages/dashboard/components/FormComponent.tsx",
  "/src/pages/dashboard/components/InternalFormComponent.tsx",
  "/src/pages/dashboard/components/JestorEmbed.tsx",
  "/src/pages/dashboard/components/LineChart.tsx",
  "/src/pages/dashboard/components/Metric.tsx",
  "/src/pages/dashboard/components/MiniTable.tsx",
  "/src/pages/dashboard/components/OrderGeneratorComponent.tsx",
  "/src/pages/dashboard/components/PieChart.tsx",
  "/src/pages/dashboard/components/Shortcuts.tsx",
  "/src/pages/dashboard/components/SingleTrickButtonComponent.tsx",
  "/src/pages/dashboard/components/TextComponent.tsx",
  "/src/pages/dashboard/components/TrippleComponent.tsx",
  "/src/pages/dashboard/components/hooks/formHooks.tsx",
  "/src/pages/dashboard/components/hooks/useListenToRealtimeUpdates.ts",
  "/src/pages/dashboard/useAppFilters.tsx",
  "/src/pages/files/DragDropUpload.tsx",
  "/src/pages/files/FileHoverCard.tsx",
  "/src/pages/files/FilePreview.tsx",
  "/src/pages/files/ObjectFileCard.tsx",
  "/src/pages/files/ScrollFiles.tsx",
  "/src/pages/modals/AddFilter.tsx",
  "/src/pages/modals/AddTab/AddTab.tsx",
  "/src/pages/modals/AddTab/CreateDashboard.tsx",
  "/src/pages/modals/AddTab/CreateObject.tsx",
  "/src/pages/modals/AddUser.tsx",
  "/src/pages/modals/AppMenu.tsx",
  "/src/pages/modals/ArchiveTab.tsx",
  "/src/pages/modals/ConnectToATable.tsx",
  "/src/pages/modals/CreateSection.tsx",
  "/src/pages/modals/DeleteObjectItemDialog.tsx",
  "/src/pages/modals/DeleteSection.tsx",
  "/src/pages/modals/DownloadFile.tsx",
  "/src/pages/modals/EditObjectFields.tsx",
  "/src/pages/modals/Find.tsx",
  "/src/pages/modals/OpenInApp.tsx",
  "/src/pages/modals/Record/ErrorMsg.tsx",
  "/src/pages/modals/Record/MiniToolsBar.tsx",
  "/src/pages/modals/Record/Record.tsx",
  "/src/pages/modals/Record/RecordFieldActionContainer.tsx",
  "/src/pages/modals/Record/RecordFieldContainer.tsx",
  "/src/pages/modals/Record/RecordNavButtons.tsx",
  "/src/pages/modals/Record/RecordSidePanel/RecordSidePanel.tsx",
  "/src/pages/modals/Record/RecordSidePanel/RelatedItens.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordAddConnectedRecordField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordAutofillField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordCheckboxField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordDateTimeField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordEnhancedTextField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordFileField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordFilesField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordFormulaField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordImageField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordNumberField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordReferenceField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordRelativeTimeField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordSelectField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTagsField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTasksField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTextField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTriggerActionField.tsx",
  "/src/pages/modals/Record/getRecordFormFieldsConfig.tsx",
  "/src/pages/modals/RecordComments.tsx",
  "/src/pages/modals/RenameTab.tsx",
  "/src/pages/modals/ReportForm.tsx",
  "/src/pages/modals/SetPipeConfig.tsx",
  "/src/pages/modals/ShareReport.tsx",
  "/src/pages/modals/ShowAllTabs.tsx",
  "/src/pages/modals/customizeField/CreateField.tsx",
  "/src/pages/modals/customizeField/DeleteField.tsx",
  "/src/pages/modals/customizeField/EditField.tsx",
  "/src/pages/modals/customizeField/EditTriggerActionField.tsx",
  "/src/pages/modals/customizeField/FieldEditorContainer.tsx",
  "/src/pages/modals/customizeField/FieldTypeSelector.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/AddConnectedRecordEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/AdvancedFormulaEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/CheckboxEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/CurrencyEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/FieldNameEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/FormulaEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/IdentifierEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/ReferenceFieldEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/SelectEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/TagFieldEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/TimeInTheSectionFieldEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/TriggerActionEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/shared/FieldDescriptionInput.tsx",
  "/src/pages/modals/dashboardComponent/ComponentTypeSelector.tsx",
  "/src/pages/modals/dashboardComponent/CreateComponent.tsx",
  "/src/pages/modals/dashboardComponent/DashboardComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/DeleteComponent.tsx",
  "/src/pages/modals/dashboardComponent/EditComponent.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/AppFiltersComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/FilterButtonComponentsFieldsGroup.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/FilterButtonEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/BooleanFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/DateFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/ListFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/NumberFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/StringFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/filterFields.ts",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonListInput.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/ButtonEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/ChartEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/EmbedEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/EventCalendarEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/FlowComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/FormComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/ImageEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/InternalFormComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/JestorEmbedEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/MenuComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/MiniListEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/OrderGeneratorComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/SingleTrickButtonEditorComponent.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/TextComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/TripleEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/UniqueEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/__deprecated__ButtonsEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/AnalyzedPeriodFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/CalculationSelect.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/OperationSelect.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/PeriodSelect.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/ReferenceDateSelect.tsx",
  "/src/pages/modals/files/FilesModal.tsx",
  "/src/pages/modals/forms/ChildsForms.tsx",
  "/src/pages/modals/forms/ConnectedTablesForms.tsx",
  "/src/pages/modals/forms/FieldsForms.tsx",
  "/src/pages/modals/forms/Forms.tsx",
  "/src/pages/modals/forms/InfoForms.tsx",
  "/src/pages/modals/forms/ListForms.tsx",
  "/src/pages/modals/forms/NewEditForms.tsx",
  "/src/pages/modals/modalsConfig.tsx",
  "/src/pages/modals/permissions/DashboardGroupsPermission.tsx",
  "/src/pages/modals/permissions/DashboardMethodPermission.tsx",
  "/src/pages/modals/permissions/DashboardPermissions.tsx",
  "/src/pages/modals/permissions/ObjectGroupsPermission.tsx",
  "/src/pages/modals/permissions/ObjectMethodPermission.tsx",
  "/src/pages/modals/permissions/ObjectPermissions.tsx",
  "/src/pages/modals/permissions/Permissions.tsx",
  "/src/pages/modals/permissions/PublicLinks.tsx",
  "/src/pages/modals/permissions/SelectGroup.tsx",
  "/src/pages/modals/permissions/publicLinks/ObjectPublicLinks.tsx",
  "/src/pages/modals/permissions/publicLinks/PublicLinkContent.tsx",
  "/src/pages/modals/tabDocumentation/DocumentationInputContainer.tsx",
  "/src/pages/modals/tabDocumentation/TabDocumentation.tsx",
  "/src/pages/modals/tabDocumentation/TabDocumentationDataProvider.tsx",
  "/src/pages/modals/tabDocumentation/UpdateTabDocumentation.tsx",
  "/src/pages/modals/tasks/CreateOrEditTask.tsx",
  "/src/pages/modals/tasks/DeleteTask.tsx",
  "/src/pages/modals/tasks/OwnerSelect.tsx",
  "/src/pages/modals/tasks/Tasks.tsx",
  "/src/pages/modals/templates/ConfigureTemplateTricks.tsx",
  "/src/pages/modals/templates/CreateOrEditBuilderProfile.tsx",
  "/src/pages/modals/templates/CreateOrEditTemplate.tsx",
  "/src/pages/modals/templates/DeleteTemplate.tsx",
  "/src/pages/modals/templates/LinkToExistingBuilderProfile.tsx",
  "/src/pages/modals/tricks/ConfigureTriggerOrAction.tsx",
  "/src/pages/modals/tricks/CreateTrick.tsx",
  "/src/pages/modals/tricks/EditOrCreateTrick.tsx",
  "/src/pages/modals/tricks/EditTrick.tsx",
  "/src/pages/modals/tricks/EditTrickNameAndDescription.tsx",
  "/src/pages/modals/tricks/SelectAction.tsx",
  "/src/pages/modals/tricks/SelectAppAccount.tsx",
  "/src/pages/modals/tricks/TrickCard.tsx",
  "/src/pages/modals/tricks/Tricks.tsx",
  "/src/pages/modals/tricks/TriggerOrActionCard.tsx",
  "/src/pages/modals/tricks/getTricksFormFieldsConfig.ts",
  "/src/pages/modals/tricks/getTriggerApiInput.ts",
  "/src/pages/modals/tricks/trickFields/TrickCheckboxField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickDateField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickDynamicFieldsGroup.tsx",
  "/src/pages/modals/tricks/trickFields/TrickDynamicSelect.tsx",
  "/src/pages/modals/tricks/trickFields/TrickFieldContainer.tsx",
  "/src/pages/modals/tricks/trickFields/TrickFieldsGroupArray.tsx",
  "/src/pages/modals/tricks/trickFields/TrickRadioField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickSelectField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickTextField.tsx",
  "/src/pages/modals/tricks/trickFields/useTrickFunction.ts",
  "/src/pages/modals/tricks/useActionsData.tsx",
  "/src/pages/notifications/NotificationTasksGroups.tsx",
  "/src/pages/object/ArchiveObjectModal.tsx",
  "/src/pages/object/KanbanView.tsx",
  "/src/pages/object/Object.tsx",
  "/src/pages/object/ObjectToolsBar.tsx",
  "/src/pages/object/ObjectViewHeader.tsx",
  "/src/pages/object/TableView.tsx",
  "/src/pages/object/TasksView.tsx",
  "/src/pages/object/record/AddConnectedRecordForm.tsx",
  "/src/pages/object/record/ConnectedRecords.tsx",
  "/src/pages/object/record/RecordView.tsx",
  "/src/pages/object/record/RecordViewCard.tsx",
  "/src/pages/object/record/RecordViewFieldContainer.tsx",
  "/src/pages/object/record/fields/RecordViewAdvancedFormulaField.tsx",
  "/src/pages/object/record/fields/RecordViewCheckboxField.tsx",
  "/src/pages/object/record/fields/RecordViewDateTimeField.tsx",
  "/src/pages/object/record/fields/RecordViewEnhancedTextField.tsx",
  "/src/pages/object/record/fields/RecordViewFileField.tsx",
  "/src/pages/object/record/fields/RecordViewFilesField.tsx",
  "/src/pages/object/record/fields/RecordViewImageField.tsx.tsx",
  "/src/pages/object/record/fields/RecordViewNumberField.tsx",
  "/src/pages/object/record/fields/RecordViewReferenceField.tsx.tsx",
  "/src/pages/object/record/fields/RecordViewRelativeTimeField.tsx",
  "/src/pages/object/record/fields/RecordViewSelectField.tsx.tsx",
  "/src/pages/object/record/fields/RecordViewTagsField.tsx",
  "/src/pages/object/record/fields/RecordViewTextField.tsx",
  "/src/pages/object/record/fields/RecordViewUserField.tsx.tsx",
  "/src/state/allApps.ts",
  "/src/state/allDashboards.ts",
  "/src/state/allObjects.ts",
  "/src/state/allObjectsCollection.ts",
  "/src/state/basicAuthCollection.ts",
  "/src/state/currentOrgPlan.ts",
  "/src/state/dashboardComponentConfigCollection.ts",
  "/src/state/dashboardComponentsDataCollection.ts",
  "/src/state/dashboardsCollection.ts",
  "/src/state/filtersStore.ts",
  "/src/state/formsCollection.ts",
  "/src/state/installedTemplatesStore.ts",
  "/src/state/kanbanConfig.ts",
  "/src/state/menuTabsStore.ts",
  "/src/state/notificationsCollection.ts",
  "/src/state/oauthCollection.ts",
  "/src/state/objectConfigCollection.ts",
  "/src/state/objectDataCollection.ts",
  "/src/state/objectFields/convertFromApiFields.ts",
  "/src/state/objectFields/objectFieldsActions.ts",
  "/src/state/objectFields/objectFieldsCollection.ts",
  "/src/state/objectFiles.ts",
  "/src/state/onboardingActionsCollection.ts",
  "/src/state/orgDataStore.ts",
  "/src/state/permissionStore.ts",
  "/src/state/profileTabsCollection.ts",
  "/src/state/profiles.ts",
  "/src/state/publicViewStore.ts",
  "/src/state/recentItems.ts",
  "/src/state/recordDataCollection.ts",
  "/src/state/relatedObjectsCollection.ts",
  "/src/state/reportsConfigStore.ts",
  "/src/state/reportsDataCollection.ts",
  "/src/state/tabDocumentationCollection.ts",
  "/src/state/tasksCollection.ts",
  "/src/state/template/convertTemplateFromApi.ts",
  "/src/state/template/currentBuilderStore.ts",
  "/src/state/template/myTemplatesDoc.ts",
  "/src/state/template/templateCategories.ts",
  "/src/state/template/templatesCollection.ts",
  "/src/state/tricks/convertTrickResponseFromApi.ts",
  "/src/state/tricks/developerTriggersCollection.ts",
  "/src/state/tricks/executeTrickAction.ts",
  "/src/state/tricks/objectTricksCollection.ts",
  "/src/state/tricks/orgTricksStore.ts",
  "/src/state/tricks/trickConnectedAccountsCollection.ts",
  "/src/state/tricks/trickDetailsCollection.ts",
  "/src/state/tricks/tricksActionConfigCollection.ts",
  "/src/state/tricks/tricksFunctionsCollection.ts",
  "/src/state/tricks/tricksTriggerConfigCollection.ts",
  "/src/state/tricks/tricksTriggersAndActionsStore.ts",
  "/src/state/tricks/triggerDataCollection.ts",
  "/src/state/uiStore.ts",
  "/src/state/userStore.ts",
  "/src/utils/appComunication.ts",
  "/src/utils/errorHandling/assertAllFieldTypesAreHandled.ts",
  "/src/utils/errorHandling/customErrors.ts",
  "/src/utils/errorHandling/errorSideEffects.ts",
  "/src/utils/errorHandling/handleError.ts",
  "/src/utils/filters.ts",
  "/src/utils/generateTabId.ts",
  "/src/utils/getMenuItemName.ts",
  "/src/utils/getReferenceWithFilterFieldFilters.ts",
  "/src/utils/hooks/permissions.ts",
  "/src/utils/hooks/useGetUsers.ts",
  "/src/utils/hooks/useLocalTableWidths.ts",
  "/src/utils/hooks/useObjectOptions.ts",
  "/src/utils/hooks/useRelativeTimeFieldValue.ts",
  "/src/utils/localSync.ts",
  "/src/utils/menuTreeUtils.tsx",
  "/src/utils/modals.tsx",
  "/src/utils/normalizeRecordValues.ts",
  "/src/utils/tabDocumentation.ts",
  "/src/utils/urlify.tsx",
  "/src/utils/user/useUncachedMentionUser.ts",
]
`;

exports[`caches the deps of previous calls > uncached files 1`] = `
[
  "/src/api/apiCall.ts",
  "/src/api/apiCollectionStore.ts",
  "/src/api/apiMock.ts",
  "/src/api/apiStore.ts",
  "/src/api/authState.ts",
  "/src/api/authentication.ts",
  "/src/api/createDemoAccount.ts",
  "/src/api/formatRecordData.ts",
  "/src/api/getSessionType.ts",
  "/src/api/login.ts",
  "/src/api/logout.ts",
  "/src/api/stores/apiCollectionStore.ts",
  "/src/api/stores/apiDocumentStore.ts",
  "/src/api/stores/apiStoresTypes.ts",
  "/src/api/useGetCollectionItem.ts",
  "/src/api/useGetRecord.ts",
  "/src/api/useQueryObjectData.ts",
  "/src/api/websocket-api/websocketApi.ts",
  "/src/components/AddConnectedRecordButton.tsx",
  "/src/components/AddFilterModal/AddFilterModal.tsx",
  "/src/components/AddFilterModal/getValueInput.tsx",
  "/src/components/Board/Board.tsx",
  "/src/components/Board/BoardCard.tsx",
  "/src/components/Board/CardField.tsx",
  "/src/components/Board/CreateColumnModal.tsx",
  "/src/components/Board/RenameColumnModal.tsx",
  "/src/components/Board/cardFields.tsx/KanbanCommentsField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanEnhancedTextField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanFilesField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanRelativeTimeField.tsx",
  "/src/components/Board/cardFields.tsx/KanbanTagsField.tsx",
  "/src/components/Board/useBoard.tsx",
  "/src/components/DateTimePicker/DateTimePicker.tsx",
  "/src/components/DateTimePicker/FloatingLabelDateTimePicker.tsx",
  "/src/components/FieldCard.tsx",
  "/src/components/FieldDescriptionIndicator.tsx",
  "/src/components/FieldTypeSelect.tsx",
  "/src/components/FilterMenu.tsx",
  "/src/components/FloatingLabelContainer.tsx",
  "/src/components/JestorTip.tsx",
  "/src/components/ListInput/ListInput.tsx",
  "/src/components/ListInput/RenameItemModal.tsx",
  "/src/components/MediaViewer.tsx",
  "/src/components/MultiselectOptionsBar.tsx",
  "/src/components/ObjectCreateButton.tsx",
  "/src/components/PaymentWarningBanner.tsx",
  "/src/components/RelatedToObjectTable.tsx",
  "/src/components/SearchableList.tsx",
  "/src/components/Select/FloatingLabelSelect.tsx",
  "/src/components/Select/RecordSelect/RecordSelect.tsx",
  "/src/components/Select/RecordSelect/RecordSelectMenu.tsx",
  "/src/components/Select/Select.tsx",
  "/src/components/Select/defaultSelectButton.tsx",
  "/src/components/Select/defaultSelectMenu.tsx",
  "/src/components/SelectFieldsModal/DefaultFieldContainer.tsx",
  "/src/components/SelectFieldsModal/SelectFieldsModal.tsx",
  "/src/components/ShoppingCart/ShoppingCartComponent.tsx",
  "/src/components/ShoppingCart/ShoppingCartFormItemComponent.tsx",
  "/src/components/ShoppingCart/ShoppingCartItemComponent.tsx",
  "/src/components/SidePanel/FieldSelectSection.tsx",
  "/src/components/SidePanel/SidePanelToggleFieldsGroup.tsx",
  "/src/components/SidePanel/form/SidePanelCheckboxGroup.tsx",
  "/src/components/SidePanel/form/SidePanelFieldContainer.tsx",
  "/src/components/SidePanel/form/SidePanelFieldsGroup.tsx",
  "/src/components/SidePanel/form/SidePanelFieldsGroupArray.tsx",
  "/src/components/SidePanel/form/SidePanelFilterField.tsx",
  "/src/components/SidePanel/form/SidePanelListInput.tsx",
  "/src/components/SidePanel/form/SidePanelObjectFieldsInput.tsx",
  "/src/components/SidePanel/form/SidePanelRadioSelect.tsx",
  "/src/components/SidePanel/form/SidePanelStringArrayInput.tsx",
  "/src/components/SidePanel/form/SidePanelTabsInput.tsx",
  "/src/components/TabDocumentationIndicator.tsx",
  "/src/components/Table/BodyCell.tsx",
  "/src/components/Table/EditCell.tsx",
  "/src/components/Table/HeaderCell.tsx",
  "/src/components/Table/cellEditors/CellDateTimeField.tsx",
  "/src/components/Table/cellEditors/CellEnhancedTextFieldEditor.tsx",
  "/src/components/Table/cellEditors/CellFileField.tsx",
  "/src/components/Table/cellEditors/CellReferenceField.tsx",
  "/src/components/Table/cellEditors/CellSelectField.tsx",
  "/src/components/Table/cellEditors/CellTagsField.tsx",
  "/src/components/Table/cellEditors/CellTextField.tsx",
  "/src/components/Table/cellsViewers/CellCommentsField.tsx",
  "/src/components/Table/cellsViewers/CellEnhancedTextField.tsx",
  "/src/components/Table/cellsViewers/CellFilesField.tsx",
  "/src/components/Table/cellsViewers/CellRelativeTimeField.tsx",
  "/src/components/Table/cellsViewers/CellTagsField.tsx",
  "/src/components/Table/cellsViewers/CellTasksField.tsx",
  "/src/components/Table/cellsViewers/CellUserField.tsx",
  "/src/components/TextField/FloatingLabelTextField.tsx",
  "/src/components/TextField/TextField.tsx",
  "/src/components/TriggerActionButton.tsx",
  "/src/components/TypeSelector/TypeSelector.tsx",
  "/src/components/comments/Comments.tsx",
  "/src/components/comments/CommentsViewer.tsx",
  "/src/components/comments/LastCommentHoverCard.tsx",
  "/src/components/fields/TagsFieldViewer.tsx",
  "/src/components/inputs/AutocompleteTextField.tsx",
  "/src/components/inputs/ImageInput.tsx",
  "/src/components/inputs/InputContainer.tsx",
  "/src/components/inputs/TabsSelect.tsx",
  "/src/components/inputs/TagInput/EditTagDropdown.tsx",
  "/src/components/inputs/TagInput/TagInput.tsx",
  "/src/components/inputs/TagsSelect.tsx",
  "/src/components/notifications/NotificationCard.tsx",
  "/src/components/notifications/TaskCard.tsx",
  "/src/components/notifications/TasksFilterMenu.tsx",
  "/src/components/notifications/TasksGroups.tsx",
  "/src/components/richText/MentionLists.tsx",
  "/src/components/richText/RichTextField.tsx",
  "/src/components/richText/RichTextFieldViewer.tsx",
  "/src/components/richText/getEditorText.ts",
  "/src/components/richText/markdownSerializer.ts",
  "/src/components/richText/plugins/CustomMention.ts",
  "/src/components/user/UserFieldViewer.tsx",
  "/src/components/user/UserHoverCard.tsx",
  "/src/components/user/renderUserSelectButton.tsx",
  "/src/data/componentTypes.ts",
  "/src/data/fieldTypesConfig.ts",
  "/src/pages/dashboard/DashboardComponentContainer.tsx",
  "/src/pages/dashboard/EditButtons.tsx",
  "/src/pages/dashboard/components/AppFilterComponent.tsx",
  "/src/pages/dashboard/components/AppMenuComponent.tsx",
  "/src/pages/dashboard/components/BarChart.tsx",
  "/src/pages/dashboard/components/CalendarEvent.tsx",
  "/src/pages/dashboard/components/DashButtonComponent.tsx",
  "/src/pages/dashboard/components/DashboardImage.tsx",
  "/src/pages/dashboard/components/Embed.tsx",
  "/src/pages/dashboard/components/FlowComponent.tsx",
  "/src/pages/dashboard/components/FormComponent.tsx",
  "/src/pages/dashboard/components/InternalFormComponent.tsx",
  "/src/pages/dashboard/components/JestorEmbed.tsx",
  "/src/pages/dashboard/components/LineChart.tsx",
  "/src/pages/dashboard/components/Metric.tsx",
  "/src/pages/dashboard/components/MiniTable.tsx",
  "/src/pages/dashboard/components/OrderGeneratorComponent.tsx",
  "/src/pages/dashboard/components/PieChart.tsx",
  "/src/pages/dashboard/components/Shortcuts.tsx",
  "/src/pages/dashboard/components/SingleTrickButtonComponent.tsx",
  "/src/pages/dashboard/components/TextComponent.tsx",
  "/src/pages/dashboard/components/TrippleComponent.tsx",
  "/src/pages/dashboard/components/hooks/formHooks.tsx",
  "/src/pages/dashboard/components/hooks/useListenToRealtimeUpdates.ts",
  "/src/pages/dashboard/useAppFilters.tsx",
  "/src/pages/files/DragDropUpload.tsx",
  "/src/pages/files/FileHoverCard.tsx",
  "/src/pages/files/FilePreview.tsx",
  "/src/pages/files/ObjectFileCard.tsx",
  "/src/pages/files/ScrollFiles.tsx",
  "/src/pages/modals/AddFilter.tsx",
  "/src/pages/modals/AddTab/AddTab.tsx",
  "/src/pages/modals/AddTab/CreateDashboard.tsx",
  "/src/pages/modals/AddTab/CreateObject.tsx",
  "/src/pages/modals/AddUser.tsx",
  "/src/pages/modals/AppMenu.tsx",
  "/src/pages/modals/ArchiveTab.tsx",
  "/src/pages/modals/ConnectToATable.tsx",
  "/src/pages/modals/CreateSection.tsx",
  "/src/pages/modals/DeleteObjectItemDialog.tsx",
  "/src/pages/modals/DeleteSection.tsx",
  "/src/pages/modals/DownloadFile.tsx",
  "/src/pages/modals/EditObjectFields.tsx",
  "/src/pages/modals/Find.tsx",
  "/src/pages/modals/OpenInApp.tsx",
  "/src/pages/modals/Record/ErrorMsg.tsx",
  "/src/pages/modals/Record/MiniToolsBar.tsx",
  "/src/pages/modals/Record/Record.tsx",
  "/src/pages/modals/Record/RecordFieldActionContainer.tsx",
  "/src/pages/modals/Record/RecordFieldContainer.tsx",
  "/src/pages/modals/Record/RecordNavButtons.tsx",
  "/src/pages/modals/Record/RecordSidePanel/RecordSidePanel.tsx",
  "/src/pages/modals/Record/RecordSidePanel/RelatedItens.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordAddConnectedRecordField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordAutofillField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordCheckboxField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordDateTimeField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordEnhancedTextField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordFileField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordFilesField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordFormulaField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordImageField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordNumberField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordReferenceField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordRelativeTimeField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordSelectField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTagsField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTasksField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTextField.tsx",
  "/src/pages/modals/Record/fieldComponents/RecordTriggerActionField.tsx",
  "/src/pages/modals/Record/getRecordFormFieldsConfig.tsx",
  "/src/pages/modals/RecordComments.tsx",
  "/src/pages/modals/RenameTab.tsx",
  "/src/pages/modals/ReportForm.tsx",
  "/src/pages/modals/SetPipeConfig.tsx",
  "/src/pages/modals/ShareReport.tsx",
  "/src/pages/modals/ShowAllTabs.tsx",
  "/src/pages/modals/customizeField/CreateField.tsx",
  "/src/pages/modals/customizeField/DeleteField.tsx",
  "/src/pages/modals/customizeField/EditField.tsx",
  "/src/pages/modals/customizeField/EditTriggerActionField.tsx",
  "/src/pages/modals/customizeField/FieldEditorContainer.tsx",
  "/src/pages/modals/customizeField/FieldTypeSelector.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/AddConnectedRecordEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/AdvancedFormulaEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/CheckboxEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/CurrencyEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/FieldNameEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/FormulaEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/IdentifierEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/ReferenceFieldEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/SelectEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/TagFieldEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/TimeInTheSectionFieldEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/TriggerActionEditor.tsx",
  "/src/pages/modals/customizeField/fieldsEditor/shared/FieldDescriptionInput.tsx",
  "/src/pages/modals/dashboardComponent/ComponentTypeSelector.tsx",
  "/src/pages/modals/dashboardComponent/CreateComponent.tsx",
  "/src/pages/modals/dashboardComponent/DashboardComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/DeleteComponent.tsx",
  "/src/pages/modals/dashboardComponent/EditComponent.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/AppFiltersComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/FilterButtonComponentsFieldsGroup.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/FilterButtonEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/BooleanFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/DateFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/ListFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/NumberFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/StringFilterFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonEditor/filterFields/filterFields.ts",
  "/src/pages/modals/dashboardComponent/componentsEditor/AppFiltersComponentEditor/FilterButtonListInput.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/ButtonEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/ChartEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/EmbedEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/EventCalendarEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/FlowComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/FormComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/ImageEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/InternalFormComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/JestorEmbedEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/MenuComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/MiniListEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/OrderGeneratorComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/SingleTrickButtonEditorComponent.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/TextComponentEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/TripleEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/UniqueEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/__deprecated__ButtonsEditor.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/AnalyzedPeriodFields.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/CalculationSelect.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/OperationSelect.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/PeriodSelect.tsx",
  "/src/pages/modals/dashboardComponent/componentsEditor/fields/ReferenceDateSelect.tsx",
  "/src/pages/modals/files/FilesModal.tsx",
  "/src/pages/modals/forms/ChildsForms.tsx",
  "/src/pages/modals/forms/ConnectedTablesForms.tsx",
  "/src/pages/modals/forms/FieldsForms.tsx",
  "/src/pages/modals/forms/Forms.tsx",
  "/src/pages/modals/forms/InfoForms.tsx",
  "/src/pages/modals/forms/ListForms.tsx",
  "/src/pages/modals/forms/NewEditForms.tsx",
  "/src/pages/modals/modalsConfig.tsx",
  "/src/pages/modals/permissions/DashboardGroupsPermission.tsx",
  "/src/pages/modals/permissions/DashboardMethodPermission.tsx",
  "/src/pages/modals/permissions/DashboardPermissions.tsx",
  "/src/pages/modals/permissions/ObjectGroupsPermission.tsx",
  "/src/pages/modals/permissions/ObjectMethodPermission.tsx",
  "/src/pages/modals/permissions/ObjectPermissions.tsx",
  "/src/pages/modals/permissions/Permissions.tsx",
  "/src/pages/modals/permissions/PublicLinks.tsx",
  "/src/pages/modals/permissions/SelectGroup.tsx",
  "/src/pages/modals/permissions/publicLinks/ObjectPublicLinks.tsx",
  "/src/pages/modals/permissions/publicLinks/PublicLinkContent.tsx",
  "/src/pages/modals/tabDocumentation/DocumentationInputContainer.tsx",
  "/src/pages/modals/tabDocumentation/TabDocumentation.tsx",
  "/src/pages/modals/tabDocumentation/TabDocumentationDataProvider.tsx",
  "/src/pages/modals/tabDocumentation/UpdateTabDocumentation.tsx",
  "/src/pages/modals/tasks/CreateOrEditTask.tsx",
  "/src/pages/modals/tasks/DeleteTask.tsx",
  "/src/pages/modals/tasks/OwnerSelect.tsx",
  "/src/pages/modals/tasks/Tasks.tsx",
  "/src/pages/modals/templates/ConfigureTemplateTricks.tsx",
  "/src/pages/modals/templates/CreateOrEditBuilderProfile.tsx",
  "/src/pages/modals/templates/CreateOrEditTemplate.tsx",
  "/src/pages/modals/templates/DeleteTemplate.tsx",
  "/src/pages/modals/templates/LinkToExistingBuilderProfile.tsx",
  "/src/pages/modals/tricks/ConfigureTriggerOrAction.tsx",
  "/src/pages/modals/tricks/CreateTrick.tsx",
  "/src/pages/modals/tricks/EditOrCreateTrick.tsx",
  "/src/pages/modals/tricks/EditTrick.tsx",
  "/src/pages/modals/tricks/EditTrickNameAndDescription.tsx",
  "/src/pages/modals/tricks/SelectAction.tsx",
  "/src/pages/modals/tricks/SelectAppAccount.tsx",
  "/src/pages/modals/tricks/TrickCard.tsx",
  "/src/pages/modals/tricks/Tricks.tsx",
  "/src/pages/modals/tricks/TriggerOrActionCard.tsx",
  "/src/pages/modals/tricks/getTricksFormFieldsConfig.ts",
  "/src/pages/modals/tricks/getTriggerApiInput.ts",
  "/src/pages/modals/tricks/trickFields/TrickCheckboxField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickDateField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickDynamicFieldsGroup.tsx",
  "/src/pages/modals/tricks/trickFields/TrickDynamicSelect.tsx",
  "/src/pages/modals/tricks/trickFields/TrickFieldContainer.tsx",
  "/src/pages/modals/tricks/trickFields/TrickFieldsGroupArray.tsx",
  "/src/pages/modals/tricks/trickFields/TrickRadioField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickSelectField.tsx",
  "/src/pages/modals/tricks/trickFields/TrickTextField.tsx",
  "/src/pages/modals/tricks/trickFields/useTrickFunction.ts",
  "/src/pages/modals/tricks/useActionsData.tsx",
  "/src/pages/notifications/NotificationTasksGroups.tsx",
  "/src/pages/object/ArchiveObjectModal.tsx",
  "/src/pages/object/KanbanView.tsx",
  "/src/pages/object/Object.tsx",
  "/src/pages/object/ObjectToolsBar.tsx",
  "/src/pages/object/ObjectViewHeader.tsx",
  "/src/pages/object/TableView.tsx",
  "/src/pages/object/TasksView.tsx",
  "/src/pages/object/record/AddConnectedRecordForm.tsx",
  "/src/pages/object/record/ConnectedRecords.tsx",
  "/src/pages/object/record/RecordView.tsx",
  "/src/pages/object/record/RecordViewCard.tsx",
  "/src/pages/object/record/RecordViewFieldContainer.tsx",
  "/src/pages/object/record/fields/RecordViewAdvancedFormulaField.tsx",
  "/src/pages/object/record/fields/RecordViewCheckboxField.tsx",
  "/src/pages/object/record/fields/RecordViewDateTimeField.tsx",
  "/src/pages/object/record/fields/RecordViewEnhancedTextField.tsx",
  "/src/pages/object/record/fields/RecordViewFileField.tsx",
  "/src/pages/object/record/fields/RecordViewFilesField.tsx",
  "/src/pages/object/record/fields/RecordViewImageField.tsx.tsx",
  "/src/pages/object/record/fields/RecordViewNumberField.tsx",
  "/src/pages/object/record/fields/RecordViewReferenceField.tsx.tsx",
  "/src/pages/object/record/fields/RecordViewRelativeTimeField.tsx",
  "/src/pages/object/record/fields/RecordViewSelectField.tsx.tsx",
  "/src/pages/object/record/fields/RecordViewTagsField.tsx",
  "/src/pages/object/record/fields/RecordViewTextField.tsx",
  "/src/pages/object/record/fields/RecordViewUserField.tsx.tsx",
  "/src/state/allApps.ts",
  "/src/state/allDashboards.ts",
  "/src/state/allObjects.ts",
  "/src/state/allObjectsCollection.ts",
  "/src/state/basicAuthCollection.ts",
  "/src/state/currentOrgPlan.ts",
  "/src/state/dashboardComponentConfigCollection.ts",
  "/src/state/dashboardComponentsDataCollection.ts",
  "/src/state/dashboardsCollection.ts",
  "/src/state/filtersStore.ts",
  "/src/state/formsCollection.ts",
  "/src/state/installedTemplatesStore.ts",
  "/src/state/kanbanConfig.ts",
  "/src/state/menuTabsStore.ts",
  "/src/state/notificationsCollection.ts",
  "/src/state/oauthCollection.ts",
  "/src/state/objectConfigCollection.ts",
  "/src/state/objectDataCollection.ts",
  "/src/state/objectFields/convertFromApiFields.ts",
  "/src/state/objectFields/objectFieldsActions.ts",
  "/src/state/objectFields/objectFieldsCollection.ts",
  "/src/state/objectFiles.ts",
  "/src/state/onboardingActionsCollection.ts",
  "/src/state/orgDataStore.ts",
  "/src/state/permissionStore.ts",
  "/src/state/profileTabsCollection.ts",
  "/src/state/profiles.ts",
  "/src/state/publicViewStore.ts",
  "/src/state/recentItems.ts",
  "/src/state/recordDataCollection.ts",
  "/src/state/relatedObjectsCollection.ts",
  "/src/state/reportsConfigStore.ts",
  "/src/state/reportsDataCollection.ts",
  "/src/state/tabDocumentationCollection.ts",
  "/src/state/tasksCollection.ts",
  "/src/state/template/convertTemplateFromApi.ts",
  "/src/state/template/currentBuilderStore.ts",
  "/src/state/template/myTemplatesDoc.ts",
  "/src/state/template/templateCategories.ts",
  "/src/state/template/templatesCollection.ts",
  "/src/state/tricks/convertTrickResponseFromApi.ts",
  "/src/state/tricks/developerTriggersCollection.ts",
  "/src/state/tricks/executeTrickAction.ts",
  "/src/state/tricks/objectTricksCollection.ts",
  "/src/state/tricks/orgTricksStore.ts",
  "/src/state/tricks/trickConnectedAccountsCollection.ts",
  "/src/state/tricks/trickDetailsCollection.ts",
  "/src/state/tricks/tricksActionConfigCollection.ts",
  "/src/state/tricks/tricksFunctionsCollection.ts",
  "/src/state/tricks/tricksTriggerConfigCollection.ts",
  "/src/state/tricks/tricksTriggersAndActionsStore.ts",
  "/src/state/tricks/triggerDataCollection.ts",
  "/src/state/uiStore.ts",
  "/src/state/userStore.ts",
  "/src/utils/appComunication.ts",
  "/src/utils/errorHandling/assertAllFieldTypesAreHandled.ts",
  "/src/utils/errorHandling/customErrors.ts",
  "/src/utils/errorHandling/errorSideEffects.ts",
  "/src/utils/errorHandling/handleError.ts",
  "/src/utils/filters.ts",
  "/src/utils/generateTabId.ts",
  "/src/utils/getMenuItemName.ts",
  "/src/utils/getReferenceWithFilterFieldFilters.ts",
  "/src/utils/hooks/permissions.ts",
  "/src/utils/hooks/useGetUsers.ts",
  "/src/utils/hooks/useLocalTableWidths.ts",
  "/src/utils/hooks/useObjectOptions.ts",
  "/src/utils/hooks/useRelativeTimeFieldValue.ts",
  "/src/utils/localSync.ts",
  "/src/utils/menuTreeUtils.tsx",
  "/src/utils/modals.tsx",
  "/src/utils/normalizeRecordValues.ts",
  "/src/utils/tabDocumentation.ts",
  "/src/utils/urlify.tsx",
  "/src/utils/user/useUncachedMentionUser.ts",
]
`;
